<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CheckFresh</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="select">-select-</string>
    <string name="brand">牌子:</string>
    <string name="code">批号:</string>
<string name="check">查询</string>
<string name="production_data">生产日期:</string>
</resources>