<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:text="@string/brand"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/select"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/brand"
        android:layout_alignBottom="@+id/brand"
        android:layout_toRightOf="@+id/brand"
        android:drawSelectorOnTop="true"
        android:prompt="@string/select" />

    <TextView
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/select"
        android:layout_margin="20dp"
        android:text="@string/code"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/code"
        android:layout_alignBottom="@+id/code"
        android:layout_toRightOf="@+id/code"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/code"
        android:layout_centerHorizontal="true"
        android:text="@string/check" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/check"
        android:layout_margin="20dp"
        android:text="@string/production_data"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/production_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check"
        android:layout_toRightOf="@+id/text1"
        android:layout_margin="20dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>